# langchain-qa_with_references

./: Makefile  README.md  pyproject.toml  qa_with_reference_and_verbatim.ipynb
.run/: Python tests in tests.run.xml
docs/integrations/chains/: qa_with_reference_and_verbatim.ipynb
langchain_qa_with_references/chains/: __init__.py
langchain_qa_with_references/chains/qa_with_references/: __init__.py  base.py  loading.py  map_reduce_prompt.py  map_reduce_prompts.py  map_rerank_prompt.py  map_rerank_prompts.py  references.py  refine_prompts.py  retrieval.py  stuff_prompt.py
langchain_qa_with_references/chains/qa_with_references_and_verbatims/: __init__.py  base.py  loading.py  map_reduce_prompts.py  map_rerank_prompts.py  refine_prompts.py  stuff_prompt.py  verbatims.py
langchain_qa_with_references/chains/retrieval_qa/: base.py
tests/integration_tests/chains/: test_integration_qa_with_references.py  test_integration_qa_with_references_and_verbatims.py  test_integration_qa_with_sources.py
tests/unit_tests/: fake_llm.py
tests/unit_tests/chains/: _test_retriever.py  _tools_qa_with_references.py  test_qa_with_references.py  test_qa_with_references_and_verbatims.py  test_qa_with_sources.py
